Fix font-size on mobile screen

--- a/src/components/common/NavList/NavList.module.sass
+++ b/src/components/common/NavList/NavList.module.sass
@@ -2,7 +2,7 @@
 @import "styles/breakpoints.scss"
 
 .nav
-  font-size: .75rem
+  font-size: 1rem
   font-weight: 700
   transition: color $animationTime
   text-transform: uppercase
